# interview-practice

./: .gitignore  README.md
builds/topLevelProjectBuild/: CMakeCache.txt  InterviewPrep  Makefile  cmake_install.cmake
builds/topLevelProjectBuild/LeetCode/: LeetCode_tst  Makefile  cmake_install.cmake
builds/topLevelProjectBuild/OA_October/: Makefile  OA_October_tst  cmake_install.cmake
code/: CMakeLists.txt  main.cpp
code/LeetCode/: CMakeLists.txt  main.cpp
code/LeetCode/IsIntPalindrome/: palindrome.cpp  palindrome.h  tst_palindrome.h
code/LeetCode/SearchInsert/: bst.cpp  bst.h  bst_unit_test.h
code/LeetCode/src/: bst.cpp
code/LeetCode/test/: bst_unit_test.h  main.cpp
code/OA_October/: CMakeLists.txt  main.cpp
code/OA_October/FindMissing/: Notes.txt  find_missing.cpp  find_missing.h
code/SharedLib/: CMakeLists.txt  solution.cpp  solution.h
scripts/: make-build-run_topLevel.sh
